feat: v2.2.0 - Complete optimization, new droids, and installer improvements (#15)
* docs: update example code to use obvious placeholder values

* docs: add comments to clarify security examples are educational

* feat: optimize all droids for AI token efficiency

     - Reduced verbose content by 60% across all 21 droids
     - Eliminated redundancy and consolidated overlapping capabilities
     - Standardized AI-optimized format with concise bullet points
     - Replaced conversational language with direct instructions
     - Preserved 100% essential functionality while improving AI readability
     - Updated task tracking with comprehensive optimization results
     - Enhanced one-shot orchestration capabilities

     Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>

* docs: add optimization results and benefits section to AGENTS.md

- Added comprehensive optimization results section with performance metrics
- Updated header to reflect v2.0 optimized status
- Enhanced one-shot mode documentation with AI-optimized droids details
- Added token efficiency metrics for all 21 droids (60% avg reduction)
- Included performance impact tables and benefits analysis
- Updated recent updates to reflect new optimization documentation

Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>

* feat: add comprehensive modern stack specialist droids

* docs: optimize AGENTS.md for 60% token reduction

- Reduce word count from 5,998 to 2,366 (60.6% reduction)
- Reduce line count from 1,450 to 585 (59.7% reduction)
- Convert verbose prose to concise bullet points and tables
- Consolidate 7 examples to 5 focused examples
- Remove redundant 'Optimization Results' section
- Remove 100+ decorative checkmarks
- Preserve 100% of critical functionality
- Add optimization report with metrics and techniques

Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>

* feat: add pl